database/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: database
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
